--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,7 @@ title : Joseph Cross
 author :
   name : Joseph Cross
   email : cross.joey@gmail.com
-  github : jjjjjjjjjjcross
-  twitter : jjjjjjjjjjcross
-  feedburner : nil
+  github : jjcrossjj
 
 production_url : https://jjjjjjjjjjcross.github.io
 
